--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -2,6 +2,11 @@ name: Codacy Static Analysis
 
 on: [push, pull_request]
 
+permissions:
+  contents: read
+  actions: read
+  checks: write
+
 jobs:
   codacy-analysis:
     runs-on: ubuntu-latest
@@ -9,6 +14,6 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Run Codacy Analysis CLI
-        uses: codacy/codacy-analysis-cli-action@v4
+        uses: codacy/codacy-analysis-cli-action@97bf5df3c09e75f5bcd72695998f96ebd701846e
         with:
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
